src/ui/snapshots/kvn_tui__ui__layout__tests__draw_migration_overlay_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, APP_WINDOW_COLS, APP_WINDOW_ROWS)"
---
┌ Traffic ──────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections                                          │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Profiles ─────────────────────────────────────────────┐┌ Logs ────────────────────────────────────────────────┐
│ No sources. Press p to paste a profile or subscription││                                                      │
│URL from clipboard.                                    ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                               ┌──────────────────────────────────────────────┐                                │
│                               │               Migration failed               │                                │
│                               │                                              │                                │
│                               │             Updating integration             │                                │
│                               │  Migration continues after closing the TUI.  │                                │
│                               │                  Step 2 of 4                 │                                │
│                               │                                              │                                │
│                               │              sudo command failed             │                                │
│                               │   Run `kvn migrate` in a terminal to retry.  │                                │
│                               │                                              │                                │
│                               │                   q/󱊷 close                  │                                │
│                               └──────────────────────────────────────────────┘                                │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
└───────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────┘
 DISCONNECTED                                                                                         DoH  Global
[113x35]
