src/ui/snapshots/kvn_tui__ui__layout__tests__draw_routing_menu_country_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, APP_WINDOW_COLS, APP_WINDOW_ROWS)"
---
┌ Traffic ──────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections                                          │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Profiles ─────────────────────────────────────────────┐┌ Logs ────────────────────────────────────────────────┐
│ No sources. Press p to paste a profile or subscription││                                                      │
│URL from clipboard.                                    ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                       ┌───────────────────────────────┐                                       │
│                                       │      Settings › Routing       │                                       │
│                                       │                               │                                       │
│                                       │   Region   ‹ 🇷🇺  Russia ›      │                                       │
│                                       │   Mode     ‹ Bypass RU ›      │                                       │
│                                       │                               │                                       │
│                                       │           Services            │                                       │
│                                       │   Steam    ‹ Disabled ›       │                                       │
│                                       │   Telegram ‹ Disabled ›       │                                       │
│                                       │                               │                                       │
│                                       │ 󰌑 apply · q/󱊷 close · ⌫ back  │                                       │
│                                       └───────────────────────────────┘                                       │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
└───────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────┘
 DISCONNECTED                                                                     DoH  Bypass RU    (off) never
