src/ui/snapshots/kvn_tui__ui__layout__tests__draw_routing_menu_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 80, 20)"
---
┌ Traffic ─────────────────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections         │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Profiles ────────────────────────────────────────────────────────────────────┐
│ No sources. Press p t┌───────────────────────────────┐ URL from clipboard.   │
│                      │      Settings › Routing       │                       │
│                      │                               │                       │
│                      │   Region   ‹ 🌍  Global ›      │                       │
│                      │                               │                       │
│                      │           Services            │                       │
│                      │   Steam    ‹ Disabled ›       │                       │
│                      │   Telegram ‹ Disabled ›       │                       │
│                      │                               │                       │
│                      │ 󰌑 apply · q/󱊷 close · ⌫ back  │                       │
│                      └───────────────────────────────┘                       │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 DISCONNECTED                                                        DoH  Global
