src/ui/snapshots/kvn_tui__ui__layout__tests__draw_routing_mode_overlay_global_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 80, 20)"
---
┌ Traffic ─────────────────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections         │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Profiles ────────────────────────────────────────────────────────────────────┐
│ No sources. Press p to paste a profile or subscription URL from clipboard.   │
│               ┌──────────────────────────────────────────────┐               │
│               │              Select routing mode             │               │
│               │                                              │               │
│               │                    Global                    │               │
│               │                                              │               │
│               │              󰌑 apply, q/󱊷 close              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 DISCONNECTED                                                        DoH  Global
