src/ui/snapshots/kvn_tui__ui__layout__tests__draw_settings_menu_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 80, 20)"
---
┌ Traffic ─────────────────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections         │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Profiles ────────────────────────────────────────────────────────────────────┐
│ No sources. Press p to paste a profile or subscription URL from clipboard.   │
│                                                                              │
│                            ┌────────────────────┐                            │
│                            │  r  +Routing      │                            │
│                            │  d  DNS settings  │                            │
│                            │  t  Theme picker  │                            │
│                            │                    │                            │
│                            │  q/󱊷 close         │                            │
│                            └────────────────────┘                            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 DISCONNECTED                                                        DoH  Global
